--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -54,31 +54,31 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: 0 57 166;
+  --primary: rgb(0 57 166);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.145 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: 218 2 14;
+  --accent: rgb(218 2 14);
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
-  --ring: 0 57 166;
-  --chart-1: 218 2 14;
-  --chart-2: 0 57 166;
+  --ring: rgb(0 57 166);
+  --chart-1: rgb(218 2 14);
+  --chart-2: rgb(0 57 166);
   --chart-3: oklch(0.646 0.222 41.116);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: 0 57 166;
+  --sidebar-primary: rgb(0 57 166);
   --sidebar-primary-foreground: oklch(1 0 0);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: 0 57 166;
+  --sidebar-ring: rgb(0 57 166);
 }
 
 .dark {
@@ -88,31 +88,31 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: 87 149 255;
+  --primary: rgb(87 149 255);
   --primary-foreground: oklch(0.145 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: 255 87 97;
+  --accent: rgb(255 87 97);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
-  --ring: 87 149 255;
-  --chart-1: 255 87 97;
-  --chart-2: 87 149 255;
+  --ring: rgb(87 149 255);
+  --chart-1: rgb(255 87 97);
+  --chart-2: rgb(87 149 255);
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
   --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: 87 149 255;
+  --sidebar-primary: rgb(87 149 255);
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(0.269 0 0);
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: 87 149 255;
+  --sidebar-ring: rgb(87 149 255);
 }
 
 @layer base {
